# BeyondGames_Implementation

./: .gitignore  LICENSE  README.md  activate_env.bat  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
config/: constraints.yaml  default.yaml
data/: README.md
docs/: README.md  TECH_STACK.md
src/timetable_scheduler/: __init__.py
src/timetable_scheduler/api/: __init__.py  app.py  main.py  schemas.py
src/timetable_scheduler/cli/: __init__.py
src/timetable_scheduler/models/: __init__.py  constraint.py  course.py  professor.py  room.py  schedule.py  time_slot.py
src/timetable_scheduler/schedulers/: __init__.py  base.py  constraint_satisfaction.py  genetic.py
src/timetable_scheduler/utils/: __init__.py  config_loader.py  exporters.py  logger.py  validators.py
src/timetable_scheduler/validators/: __init__.py
tests/: conftest.py
tests/test_models/: __init__.py  test_course.py
